# kombucha

./: Cargo.toml  README.md
examples/: eq.vo  gen_html.page.html  gen_html.page.vo  gen_html.rs  gen_html.vo  jubjub.rs  jubjub.vo  page.html  page.vo  reload.vo  ski.vo  std.vo
examples/generate_html/: main.kb  main.rs  page.html
examples/md_to_html/: 2025-06-12.html  main.kb  main.rs  page.html  page.md
src/: _blog.rs  _prelude.kb  _prelude.vo  bytecode.rs  compile.rs  jubjub.rs  lib.rs  run.rs  serde.rs  ski.rs  snickersnack.rs  vorpal.rs
src/serde/: de.rs  ser.rs
tests/: _prelude.rs  _raw.rs  _stages.rs  desugar_err.txt  err_desugar.txt  err_parse.txt  parse.txt  parse_err.txt  parse_ok.txt  run_apply.txt  run_apply_rec2.txt  run_block.txt  run_fn.txt  run_fn_app1.txt  run_if.txt  run_macro.txt  run_pop.txt  run_rec.txt  run_record.txt  run_type.txt  run_with_effects.txt  run_with_rec_effects.txt  run_with_reload.txt  run_with_std_fns.txt  serde_de.rs  serde_ser.rs  with_prelude_run_ssg.out.txt  with_prelude_run_ssg.txt
tests/common/: mod.rs
vorpal/: blog.vo  post.html  post.md
